try to fix scrollbar flicker issue

--- a/w3-django/wiki/encyclopedia/static/encyclopedia/styles.css
+++ b/w3-django/wiki/encyclopedia/static/encyclopedia/styles.css
@@ -12,11 +12,6 @@ h1 {
     padding-top: 20px;
 }
 
-textarea {
-    height: 90vh;
-    width: 80%;
-}
-
 .main {
     padding: 10px;
 }
@@ -34,5 +29,5 @@ textarea {
 }
 
 .sidebar h2 {
-    margin-top: 5px;
+    padding-top: 5px;
 }
